# TagLib-Wasm

./: AGENTS.md  CHANGELOG.md  README.md  deno.json  index.ts  knip.json  package-lock.json  package.json  sonar-project.properties
.github/workflows/: ci.yml  docs.yml  publish-everywhere.yml  sonarcloud.yml
docs/.vitepress/: config.ts
docs/adr/: 0001-dual-backend-boundary-protocols.md
docs/advanced/: implementation.md
docs/api/: index.md
docs/guide/: broadcast-metadata.md  chapters.md  codec-detection.md
examples/browser/: cover-art-canvas.html
scripts/: fix-imports.js  postbuild.mjs  release-safe.sh  release.sh  update-taglib.sh  wait-for-ci.sh
src/: wasm.ts
src/bwf/: bext.ts
src/capi/: CMakeLists.txt  taglib_audio_props.cpp  taglib_audio_props.h  taglib_bwf.cpp  taglib_bwf.h  taglib_chapters.cpp  taglib_id3_strip.cpp  taglib_id3_strip.h  taglib_shim.cpp
src/capi/formats/: taglib_lame.cpp  taglib_lame.h
src/constants/: complex-properties.ts
src/msgpack/: encoder.ts  index.ts
src/runtime/: wasi-host-loader.ts
tests/: backend-adapter.ts  bitrate-mode.test.ts  bwf-bext-codec.test.ts  bwf.test.ts  capi_lame_parser.test.cpp  capi_memory_pool.test.cpp  chapters.test.ts  extended-write-roundtrip.test.ts  msgpack-codec-unit.test.ts  msgpack.test.ts  opus-output-gain.test.ts  run-capi-tests.sh  security.test.ts  simple-api-unit.test.ts  strip-id3-flac.test.ts  test-runtimes.sh  unified-loader-components.test.ts  wasi-adapter-unit.test.ts  wasi-host.test.ts  wasi-path-io.test.ts  wasi-vs-emscripten.bench.ts  wasi-write-roundtrip.test.ts
(+22 files in other folders)
